--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <html>
-<holo> this is my first web page powered by GitHub Pages </holo>
-
-Thanks GitHub!
-
-</html>
+<h1> Esta es mi primera página con GitHub Pages </h1> 
+<p>¡Gracias GitHub!</p> 
+</html> 
