--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  
 <h1> Esta es mi primera página con GitHub Pages </h1> 
-<p>¡Gracias GitHub!</p> 
+<h1> trabajo del curso MIT Transformacion Digital </h1>
+<h1> Marco Mollinedo </h1> 
+
+  <p>¡Gracias GitHub!</p> 
 </html> 
