--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
   
-<h1> Esta es mi primera página con GitHub Pages </h1> 
-<h2> trabajo del curso MIT Transformacion Digital </h2>
-<h3> Marco Mollinedo </h3> 
+<h1> Creacion de una pagina web MIT Transformacion Digital Marco Mollinedo By GitHub </h1> 
 
   <p>¡Gracias GitHub!</p> 
 </html> 
