--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<html>
-  
-<h1> Creacion de una pagina web MIT Transformacion Digital Marco Mollinedo By GitHub </h1> 
+<html>  
+<h1> Creacion de una pagina web MIT Transformacion Digital Marco Mollinedo </h1> 
 
   <p>¡Gracias GitHub!</p> 
 </html> 
